<resources>
    <string name="app_name">알팡</string>
    <string name="kakao_app_key">80fe788ee827bf52b012dfb4c6b78a3a</string>
    <string name="kakao_scheme">kakao80fe788ee827bf52b012dfb4c6b78a3a</string>
    <string name="google_client_id">228227154329-gks0vtpv63g4jshsuo39q7gdbo1o0ots.apps.googleusercontent.com</string>
    <string name="google_web_client_id">228227154329-druh62o37igd3lv9ipbjq2ndh85r09dj</string>
    <string name="facebook_app_id">405879092532692</string>
    <string name="facebook_token">79a72a38a00dbbdf01ee383c8e966a5e</string>
    <string name="network_connect_error_title">네트워크 연결 실패</string>
    <string name="network_connect_error_content">네트워크 연결에 실패하였습니다.\n확인 후 다시 시도해주세요.</string>
    <string name="printer_setting_disconnect_desc1">프린터가 연결되어 있지 않습니다.</string>
    <string name="printer_setting_disconnect_desc2">제작한 사진은 보관함에서 확인할 수 있으며,\n프린터 연결 후 인쇄할 수 있습니다.</string>
    <string name="printer_setting_disconnect_btn">저장 후 나중에 인쇄</string>
    <string name="printer_setting_not_paper_desc1">용지가 장착되어 있지 않습니다.</string>
    <string name="printer_setting_not_paper_desc2">다용도 용지 장착 후 인쇄해주세요.\n보관함에 저장 후 나중에 다시 인쇄할 수 있습니다.</string>
    <string name="printer_setting_another_paper_desc1">[%1s]로 제작된 컨텐츠입니다.\n장착된 [%2s]로 인쇄할 경우\n아래와 같이 나올 수 있습니다.\n\n현재 상태로 인쇄하시거나, 보관함에 저장 후\n다시 인쇄할 수 있습니다.</string>
    <string name="printer_setting_another_paper_btn">현재 용지로 인쇄</string>
    <string name="printer_setting_another_paper_btn_next">저장 후 나중에 인쇄</string>
    <string name="printer_setting_toasting_desc">용지를 구워내고 있습니다.</string>
    <string name="loading_content">장착된 용지를 인식중입니다.</string>
    <string name="loading_content_printer">프린터 연결중입니다.</string>
    <string name="actionbar_print_text">인쇄</string>
    <string name="actionbar_print_preview">미리보기</string>
    <string name="lib_popup_report">신고하기</string>
    <string name="lib_popup_reject">차단하기</string>
    <string name="lib_popup_report_comment">게시글을 신고하였습니다.</string>
    <string name="lib_popup_delete">삭제하기</string>
    <string name="lib_ar_video_popup_delete">AR 영상을 보관함에서 삭제하실 경우\n기존 인쇄한 사진의 재생이 불가능합니다.\n삭제하시겠습니까?</string>
    <string name="lib_detail_popup_paper_not">용지가 장착되어 있지 않습니다.적합한 용지를 장착해주세요.</string>
    <string name="subscribe_toast_desc_1">사용자를 신고하였습니다.</string>
    <string name="subscribe_toast_desc_2">사용자를 차단하였습니다.</string>
    <string name="subscribe_toast_desc_3">사용자를 구독하였습니다.</string>
    <string name="block_user_manage_desc_1">해제됨</string>
    <string name="block_user_manage_desc_2">차단 해제</string>
    <string name="from_kakao_login_account">카카오로 로그인</string>
    <string name="from_google_login_account">구글로 로그인</string>
    <string name="from_naver_login_account">네이버로 로그인</string>
    <string name="from_facebook_login_account">페이스북으로 로그인</string>
    <string name="from_apple_login_account">애플로 로그인</string>
    <string name="from_empty_email_account">등록된 이메일이 없습니다.</string>
    <string name="share_content_comment_report">댓글을 신고하였습니다.</string>
    <string name="search_actionbar_hint">검색어를 입력해주세요</string>
    <string name="search_step_first_desc_1">최근 검색어</string>
    <string name="search_step_first_desc_2">전체삭제</string>
    <string name="search_step_first_desc_3">인기 검색 태그</string>
    <string name="search_step_first_desc_4">최근 검색어가 없습니다.</string>
    <string name="search_step_second_desc_1">사용자</string>
    <string name="search_step_second_desc_1_1">사용자 %s</string>
    <string name="search_step_second_desc_2">공유공간</string>
    <string name="search_step_second_desc_2_1">공유공간 %s</string>
    <string name="search_step_second_desc_3">보관함</string>
    <string name="search_step_second_desc_3_1">보관함 %s</string>
    <string name="search_step_third_desc_1">“%s” 검색결과</string>
    <string name="splash_title_bic">ARPANG</string>
    <string name="splash_title_small">AR 즐거움이 팡팡</string>
    <string name="splash_alert_permission_title">권한 필요</string>
    <string name="splash_alert_permission_message">앱의 기능을 사용하기 위해 필요한 권한이 거부되었습니다. 설정에서 권한을 허용해주세요.</string>
    <string name="splash_alert_permission_btn">설정으로 이동</string>
    <string name="splash_alert_cancel">취소</string>
    <string name="splash_alert_update_title">업데이트 안내</string>
    <string name="splash_alert_update_message">원할한 서비스 이용을 위해\n새로운 버전을 설치해주세요</string>
    <string name="splash_alert_leftBtn_text">앱 종료</string>
    <string name="splash_alert_rightBtn_text">업데이트</string>
    <string name="splash_alert_inspection_title">점검 공지</string>
    <string name="splash_alert_inspection_message">서비스 점검중입니다.\n예상 종료 시간 : %s</string>
    <string name="login_title_bic">ARPANG</string>
    <string name="login_title_small">AR 즐거움이 팡팡</string>
    <string name="login_email_desc">이메일로 시작하기</string>
    <string name="login_email_button_title">이메일로 계속하기</string>
    <string name="login_sns_account_desc">SNS 계정으로 로그인</string>
    <string name="login_email_editbox_hint">이메일을 입력해주세요</string>
    <string name="login_email_validation">*올바른 이메일 주소를 입력해주세요</string>
    <string name="login_sns_desc">SNS 계정으로 로그인</string>
    <string name="login_pw_desc">이메일 로그인</string>
    <string name="login_pw_input_email_hint">비밀번호를 입력해 주세요</string>
    <string name="login_pw_login_btn">로그인</string>
    <string name="login_pw_find_desc">비밀번호를 잊어버리셨나요?</string>
    <string name="login_pw_find"><u>비밀번호 찾기</u></string>
    <string name="login_alert_already_sns_title">알림</string>
    <string name="login_alert_already_sns">입력하신 이메일은\n%s 으로 가입되어 있습니다.\n소셜 버튼을 눌러 로그인해주세요.</string>
    <string name="login_google">구글 로그인</string>
    <string name="login_facebook">페이스북 로그인</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="login_naver">네이버 로그인</string>
    <string name="login_apple">Apple 로그인</string>
    <string name="join_email_title">회원가입 하고\n토스티와 추억을 인쇄해보세요.</string>
    <string name="join_email_desc_1">이메일</string>
    <string name="join_email_desc_1_1">sample@input.email</string>
    <string name="join_email_desc_1_2">닉네임</string>
    <string name="join_email_desc_2">이름</string>
    <string name="join_email_desc_2_2">서비스에서 사용하실 이름을 입력해주세요</string>
    <string name="join_email_warning_name">* 이름을 두글자 이상 입력해주세요.</string>
    <string name="join_email_desc_3">비밀번호</string>
    <string name="join_email_desc_3_1">비밀번호를 입력해주세요</string>
    <string name="join_email_desc_3_2">비밀번호를 다시 입력해주세요</string>
    <string name="join_email_warning_pw">* 비밀번호가 일치하지 않습니다.</string>
    <string name="join_email_warning_pw_length">* 비밀번호는 6자 이상으로 입력해주세요.</string>
    <string name="join_email_all_consent_desc">모든 약관에 동의합니다.</string>
    <string name="join_email_consent_1">[필수] 이용약관</string>
    <string name="join_email_consent_2">[필수] 개인정보 수집 및 이용</string>
    <string name="join_email_consent_3">[선택] 광고성 정보 수신 동의</string>
    <string name="join_email_btn">회원 가입</string>
    <string name="join_nick_hint">서비스에서 사용하실 이름을 입력해주세요</string>
    <string name="cert_email_title">ARPANG</string>
    <string name="cert_email_sub_title">캐치프레이즈</string>
    <string name="cert_email_desc_1">이메일로 전송된\n인증번호를 입력해주세요</string>
    <string name="cert_email_desc_2">가입인증 메일을 전송하였습니다.</string>
    <string name="cert_email_edit_hint">인증번호 4자리 입력</string>
    <string name="cert_email_send_btn">인증</string>
    <string name="cert_email_fail_send">메일이 오지 않으셨나요?</string>
    <string name="cert_email_re_send"><u>인증번호 재전송</u></string>
    <string name="cert_email_desc_3">“가입 후 24시간내에 인증을 완료하여야 하며,\n인증 받지 않은 계정은 24시간 후 삭제됩니다.”</string>
    <string name="cert_email_fail_code_num">인증번호가 일치하지 않습니다.\n다시 확인해주세요.</string>
    <string name="cert_email_success_code_num">인증번호가 재전송되었습니다.\n이메일을 확인해주세요.</string>
    <string name="password_re_send_success">이메일로 비밀번호를 재설정 할 수 있는\n링크가 전달되었습니다.</string>
    <string name="join_consent_title">회원가입을 위해\n아래 약관에 동의해주세요.</string>
    <string name="welcome_title">반갑습니다.\n토스티에서 다양한 추억을\n인쇄해보세요.</string>
    <string name="welcome_btn">시작하기</string>
    <string name="polish_term_title">이용 약관</string>
    <string name="polish_term_btn">이용약관에 동의합니다.</string>
    <string name="polish_privacy_title">개인정보 처리방침</string>
    <string name="polish_privacy_btn">개인정보 처리방침에 동의합니다.</string>
    <string name="find_pw_title">ARPANG</string>
    <string name="find_pw_sub_title">캐치프레이즈</string>
    <string name="find_pw_desc_1">비밀번호 재설정</string>
    <string name="find_pw_desc_2">비밀번호를 재설정 할 수 있도록\n이메일을 전송합니다.</string>
    <string name="find_pw_send_btn">비밀번호 재설정 메일 전송</string>
    <string name="home_event_bottom_title">EVENT</string>
    <string name="home_event_bottom_days_more">오늘 하루 더 보지 않습니다.</string>
    <string name="home_event_bottom_close">닫기</string>
    <string name="home_nav_title_1">홈</string>
    <string name="home_nav_title_2">보관함</string>
    <string name="home_nav_title_3">공유공간</string>
    <string name="home_nav_title_4">스토어</string>
    <string name="home_nav_title_5">더보기</string>
    <string name="home_connect_print_message">프린터가 연결되어 있지 않습니다.\n아래 버튼을 눌러 토스티 프린터를 연결해주세요.</string>
    <string name="home_connect_print_btn"><u>프린트 연결</u></string>
    <string name="home_guide_paper"><u>장착 가이드</u></string>
    <string name="home_desc_1">프린터가 연결되어 있지 않아요</string>
    <string name="home_desc_1_1">용지를 장착해보세요</string>
    <string name="home_desc_1_2">용지 : %s</string>
    <string name="home_desc_2">토스티로 할 수 있는 작업들이에요</string>
    <string name="home_desc_2_2">토스티로 할 수 있는 작업들이에요</string>
    <string name="home_desc_3">이렇게 활용해 볼까요?</string>
    <string name="home_desc_4">서비스 이용 가이드</string>
    <string name="home_desc_5">서비스 이용방법을 확인해보세요.</string>
    <string name="home_other_paper_job_title">다른 용지로 할 수 있는 작업들이에요.</string>
    <string name="home_paper_match_job_title">현재 용지로는 아래와 같은 작업이 가능해요</string>
    <string name="device_connect_title">디바이스 연결</string>
    <string name="device_connect_sub_title">연결 가능한 디바이스가 검색되었습니다.</string>
    <string name="device_connect_re_search">다시 검색하기</string>
    <string name="device_connect_guide_title">프린터 연결이 어려우신가요?</string>
    <string name="device_connect_desc_1">1.토스티 전원을 켜 주세요.</string>
    <string name="device_connect_desc_2">2.연결 관련한 머신 제어 방법 가이드</string>
    <string name="device_connect_desc_3">3.블루투스 설정 체크는 앱 실행시 체크하며, 이때 활성화 안되었으면, 해당 페이지에서 다시 체크하여 블루투스 설정 시스템 모달 표시</string>
    <string name="paper_connect_title">용지 장착</string>
    <string name="paper_connect_banner_title">용지가 없으신가요?</string>
    <string name="paper_connect_banner_sub_title">스토어 연결</string>
    <string name="manual_guide_1">장치 연결</string>
    <string name="manual_guide_2">장치 구매</string>
    <string name="manual_guide_3">인쇄하기</string>
    <string name="manual_guide_4">기본 가이드</string>
    <string name="manual_guide_5">AR 영상</string>
    <string name="manual_guide_6">인생두컷</string>
    <string name="manual_guide_7">자유편집</string>
    <string name="manual_guide_8">라벨 스티커</string>
    <string name="manual_guide_9">행사 스티커</string>
    <string name="cartridge_empty_action_text_1">AR 영상 인쇄</string>
    <string name="cartridge_empty_action_text_2">인생 두컷</string>
    <string name="cartridge_empty_action_text_3">자유 인쇄</string>
    <string name="cartridge_empty_action_text_4">라벨 스티커</string>
    <string name="cartridge_empty_action_text_5">행사 스티커</string>
    <string name="cartridge_empty_title">용지가 없습니다.</string>
    <string name="cartridge_empty_sub_title">인쇄하고 싶은 용지를 선택해서 만든 후\n보관함에 저장하시면 나중에 인쇄할 수 있어요.</string>
    <string name="cartridge_add_proto_type"><u>프로토타입용 링크 : 용지 장착 인식</u></string>
    <string name="cartridge_preview_title">용지 미리보기</string>
    <string name="cartridge_preview_start">시작하기</string>
    <string name="edit_video_print_alert_title">알림</string>
    <string name="edit_video_print_alert_delete_content">삭제한 컨텐츠는 다시 복구할 수 없습니다.\n삭제하시겠습니까?</string>
    <string name="edit_video_print_alert_msg">편집중인 내용을 취소하고\n돌아가시겠습니까?</string>
    <string name="edit_video_print_alert_left_btn">계속 편집하기</string>
    <string name="edit_video_print_alert_right_btn">편집 취소</string>
    <string name="edit_video_print_title">인쇄 편집</string>
    <string name="edit_video_print_print">인쇄</string>
</resources>