<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_1"
        android:icon="@drawable/bg_home_bottom_icon"
        android:title="@string/home_nav_title_1" />
    <item
        android:id="@+id/nav_2"
        android:icon="@drawable/bg_storage_bottom_icon"
        android:title="@string/home_nav_title_2" />
    <item
        android:id="@+id/nav_3"
        android:icon="@drawable/bg_share_bottom_icon"
        android:title="@string/home_nav_title_3" />
    <item
        android:id="@+id/nav_4"
        android:icon="@drawable/bg_store_bottom_icon"
        android:title="@string/home_nav_title_4" />
    <item
        android:id="@+id/nav_5"
        android:icon="@drawable/bg_more_bottom_icon"
        android:title="@string/home_nav_title_5" />
</menu>