<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_f5f5f5">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar_style_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_item_1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/manual_guide_4"
        android:textColor="@color/color_black"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:paddingStart="28dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionbar"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_item_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/manual_guide_5"
        android:textColor="@color/color_black"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:paddingStart="28dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_item_1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_item_3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/manual_guide_6"
        android:textColor="@color/color_black"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:paddingStart="28dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_item_2"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_item_4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/manual_guide_7"
        android:textColor="@color/color_black"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:paddingStart="28dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_item_3"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_item_5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/manual_guide_8"
        android:textColor="@color/color_black"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:paddingStart="28dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_item_4"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/menu_item_6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:text="@string/manual_guide_9"
        android:textColor="@color/color_black"
        android:textSize="16dp"
        android:gravity="center_vertical"
        android:paddingStart="28dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_item_5"/>
</androidx.constraintlayout.widget.ConstraintLayout>