<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar_style_1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title_bic"
        android:textColor="@color/color_black"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".15" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleSubView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/login_title_small"
        android:textColor="@color/color_5B5B5B"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@id/titleView"
        app:layout_constraintStart_toStartOf="@id/titleView"
        app:layout_constraintTop_toBottomOf="@id/titleView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descTxt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login_pw_desc"
        android:textColor="@color/color_black"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/titleSubView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailAddressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/color_424242"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/descTxt_1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPwView"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_editbox_stroke_gray_5dp"
        android:hint="@string/login_pw_input_email_hint"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/color_171717"
        android:textColorHint="@color/color_CECECE"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/emailAddressTxt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_selector_disable_enable"
        android:gravity="center"
        android:text="@string/login_pw_login_btn"
        android:textColor="@color/color_white"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/inputPwView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descTxt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_pw_find_desc"
        android:textColor="@color/color_868686"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/loginBtn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/findPwBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/login_pw_find"
        android:textColor="@color/color_8e5d4b"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@id/descTxt_2"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@id/descTxt_2" />
</androidx.constraintlayout.widget.ConstraintLayout>