<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar_style_1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard700"
        android:text="@string/find_pw_title"
        android:textColor="@color/color_black"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/actionbar"
        app:layout_constraintVertical_bias=".2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/pretendard400"
        android:text="@string/find_pw_sub_title"
        android:textColor="@color/color_5B5B5B"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@id/titleView"
        app:layout_constraintStart_toStartOf="@id/titleView"
        app:layout_constraintTop_toBottomOf="@id/titleView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/pretendard700"
        android:text="@string/find_pw_desc_1"
        android:textColor="@color/color_171717"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/subTitleView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pretendard400"
        android:gravity="center"
        android:text="@string/find_pw_desc_2"
        android:textColor="@color/color_373843"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/desc_1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputEmailView"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_editbox_solid_gray"
        android:fontFamily="@font/pretendard400"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="afsafsf"
        android:textColor="@color/color_424242"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/desc_2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sendBtn"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button_blue_round"
        android:fontFamily="@font/pretendard400"
        android:gravity="center"
        android:text="@string/find_pw_send_btn"
        android:textColor="@color/color_white"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/inputEmailView" />
</androidx.constraintlayout.widget.ConstraintLayout>